--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -17,4 +17,18 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: hello-artifact
-        path: hello.txt
+        path: ./artifact/hello.txt
+
+  download:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Download text file
+      uses: actions/upload-artifact@v4
+      with:
+        name: hello-artifact
+        path: ./artifact/hello.txt
+
+    - name: Display content of the text file
+      run: cat ./artifacts/hello.txt
