--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -32,5 +32,5 @@ jobs:
 
     - name: Display content of the text file
       run: |
-        mkdir -p ./artifact/
+        mkdir -p artifacts
         cat ./artifacts/hello.txt 
