--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -25,12 +25,12 @@ jobs:
 
     steps:
     - name: Download text file
-      uses: actions/upload-artifact@v4
+      uses: actions/download-artifact@v4
       with:
         name: hello-artifact
         path: ./artifact/hello.txt
 
     - name: Display content of the text file
       run: |
-        mkdir -p artifacts
+        mkdir -p ./artifacts/
         cat ./artifacts/hello.txt 
