--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -28,9 +28,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: hello-artifact
-        path: ./artifact/hello.txt
+        path: ./artifact/
 
     - name: Display content of the text file
-      run: |
-        mkdir -p ./artifacts/
-        cat ./artifacts/hello.txt 
+      run: cat ./artifacts/hello.txt 
